force-app/main/default/objects/Volume_Pricing_Schedule__c/Volume_Pricing_Schedule__c.object-meta.xml
<CustomObject>
    <description>Defines pricing model and applicability for product volume pricing.</description>
    <label>Volume Pricing Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volume Pricing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>