force-app/main/default/objects/Volume_Pricing_Schedule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only active schedules are evaluated at quote or order time. Uncheck to disable a schedule without deleting it.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>