force-app/main/default/objects/Volume_Pricing_Schedule__c/fields/Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate__c</fullName>
    <inlineHelpText>Unit price applied to quantities that exceed the highest defined tier. If blank, quantities above the last tier are either blocked or handled by custom logic.</inlineHelpText>
    <label>Overage Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>