force-app/main/default/objects/Volume_Pricing_Schedule__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If blank, this schedule applies globally to the product across all pricebooks. If set, it applies only when the product is sold from this specific pricebook.</inlineHelpText>
    <label>Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Volume Pricing Schedules</relationshipLabel>
    <relationshipName>Volume_Pricing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>