force-app/main/default/objects/Volume_Pricing_Schedule__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <inlineHelpText>Block: the total order price is the flat price of the tier the quantity falls into.
Tiered: each unit is priced at the rate for its quantity bracket.</inlineHelpText>
    <label>Pricing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
                <default>true</default>
                <label>Tiered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>