force-app/main/default/objects/Volume_Pricing_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The product this volume pricing schedule applies to. Each product may have multiple schedules for different pricebooks.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Volume Pricing Schedules</relationshipLabel>
    <relationshipName>Volume_Pricing_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>