force-app/main/default/objects/Volume_Pricing_Schedule__c/validationRules/Vol_Pricing_Sched_Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Vol_Pricing_Sched_Product_Required</fullName>
    <active>true</active>
    <description>Enforces Product as required because Product2 lookup cannot be required with restricted delete behavior.</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Every Volume Pricing Schedule must be associated with a Product.</errorMessage>
</ValidationRule>