force-app/main/default/objects/Volume_Pricing_Schedule__c/validationRules/Vol_Pricing_Schedule_Overage_Non_Neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Vol_Pricing_Schedule_Overage_Non_Neg</fullName>
    <active>true</active>
    <description>Prevents negative overage rates.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Overage_Rate__c)),
  Overage_Rate__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Overage_Rate__c</errorDisplayField>
    <errorMessage>Overage Rate must be zero or a positive value. Negative pricing is not permitted.</errorMessage>
</ValidationRule>