force-app/main/default/objects/Volume_Pricing_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Pricebook__c</columns>
    <columns>Pricing_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>